Split the deepseek-14B.ipynb and deepseek-7B.ipynb

--- a/lab-materials/deepseek-7B.ipynb
+++ b/lab-materials/deepseek-7B.ipynb
@@ -17,28 +17,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !CUDA_VISIBLE_DEVICES=1,3  vllm serve \"deepseek-ai/DeepSeek-V3\" \\\n",
-    "!CUDA_VISIBLE_DEVICES=1,2  vllm serve \"deepseek-ai/DeepSeek-R1-Distill-Qwen-14B\" \\\n",
-    "    --port 8989 \\\n",
-    "    --api-key alanliuxiang \\\n",
-    "    --enable-auto-tool-choice \\\n",
-    "    --tool-call-parser granite \\\n",
-    "    --max_model_len 34688   \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ca56ffb-e012-4fea-b90b-1c6e9c92d81d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !CUDA_VISIBLE_DEVICES=1,3  vllm serve \"deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B\" \\\n",
+    "# !CUDA_VISIBLE_DEVICES=0,1,2,3  vllm serve \"deepseek-ai/DeepSeek-R1-Distill-Qwen-14B\" \\\n",
     "#     --port 8989 \\\n",
     "#     --api-key alanliuxiang \\\n",
+    "#     --tensor-parallel-size 4 \\\n",
     "#     --enable-auto-tool-choice \\\n",
-    "#     --tool-call-parser granite "
+    "#     --tool-call-parser granite \\\n",
+    "#     --gpu-memory-utilization 0.8 \\\n",
+    "#     --max_model_len 34688   "
    ]
   },
   {
@@ -51,7 +37,16 @@
     "# !CUDA_VISIBLE_DEVICES=1,3 vllm serve deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B \\\n",
     "#     --port 8989 \\\n",
     "#     --api-key alanliuxiang \\\n",
-    "#     --enable-reasoning --reasoning-parser deepseek_r1"
+    "#     --enable-reasoning --reasoning-parser deepseek_r1\n",
+    "\n",
+    "!CUDA_VISIBLE_DEVICES=2,3  vllm serve \"deepseek-ai/DeepSeek-R1-Distill-Qwen-7B\" \\\n",
+    "    --port 8989 \\\n",
+    "    --api-key alanliuxiang \\\n",
+    "    --tensor-parallel-size 2 \\\n",
+    "    --enable-auto-tool-choice \\\n",
+    "    --tool-call-parser granite \\\n",
+    "    --gpu-memory-utilization 0.8 \\\n",
+    "    --max_model_len 34688   "
    ]
   }
  ],
